# StringExtensions

./: CMakeLists.txt  LICENSE.txt  README.md
include/StringExtensions/: StringExtensions.hpp
src/: StringExtensions.cpp
test/: CMakeLists.txt
test/src/: StringExtensionsTests.cpp
